test/syntax/fail/duplicate_let_binding.sync
let node f () =
  let x = true
  and x = true
  in x
